# UGrid

./: .clang-format  .gitignore  CMakeLists.txt  README.md  _constants_8hpp_source.html  _contacts_8hpp_source.html  _mesh1_d_8hpp_source.html  _mesh2_d_8hpp_source.html  _mesh_locations_8hpp_source.html  _network1_d_8hpp_source.html  _operations_8hpp_source.html  _p_i_2include_2_u_grid_a_p_i_2_contacts_8hpp_source.html  _p_i_2include_2_u_grid_a_p_i_2_mesh1_d_8hpp_source.html  _p_i_2include_2_u_grid_a_p_i_2_mesh2_d_8hpp_source.html  _p_i_2include_2_u_grid_a_p_i_2_network1_d_8hpp_source.html  _u_grid_2_contacts_8hpp_source.html  _u_grid_2_mesh1_d_8hpp_source.html  _u_grid_2_mesh2_d_8hpp_source.html  _u_grid_2_network1_d_8hpp_source.html  _u_grid_8hpp_source.html  _u_grid_api_2_contacts_8hpp_source.html  _u_grid_api_2_mesh1_d_8hpp_source.html  _u_grid_api_2_mesh2_d_8hpp_source.html  _u_grid_api_2_network1_d_8hpp_source.html  _u_grid_entity_8hpp_source.html  _u_grid_state_8hpp_source.html  _u_grid_var_attribute_string_builder_8hpp_source.html  annotated.html  classugrid_1_1_u_grid_entity-members.html  classugrid_1_1_u_grid_entity.html  classugrid_1_1_u_grid_var_attribute_string_builder-members.html  classugrid_1_1_u_grid_var_attribute_string_builder.html  dir_0d482c96ba533cbb7dd46ba84cd90047.html  dir_1036706e55c22cab35bc1c58ee689f1d.html  dir_1625b04ea8d7316b22e9665246f707c1.html  dir_1f2a6235b42bcd54945659c9203d3f31.html  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2.html  dir_4cc40c8a645c539eda42131cf9b7d576.html  dir_621d8c3059959fcd90ae52de25908b89.html  dir_629f8151d55d307162ff2d619fb1783d.html  (+39 more)
UGrid/libs/UGrid/: CMakeLists.txt
UGrid/libs/UGrid/include/UGrid/: Constants.hpp  Network1D.hpp  Operations.hpp  UGridEntity.hpp
UGrid/libs/UGrid/src/: Contacts.cpp  Mesh1D.cpp  Mesh2D.cpp  Network1D.cpp  UGridEntity.cpp
UGrid/libs/UGridNET/SWIG/: CMakeLists.txt
UGrid/libs/UGridNET/SWIG/interface/: UGrid.i  UGridTypemaps.i
UGridNET/: Directory.Build.props  Directory.Build.targets  Directory.Packages.props  Nuget.config  UGridNET.sln  UGridNET.sln.DotSettings
cmake/: cached_globals.cmake  compiler_config.cmake  configure_dotnet_packages.cmake  fetch_content.cmake  fetch_contents.cmake  find_packages.cmake  git_helpers.cmake  install_swig.cmake  install_tools.cmake  options.cmake  user_config_options.cmake
docs/: CMakeLists.txt  Doxyfile.in  main_page.md
libs/: CMakeLists.txt
libs/UGrid/: CMakeLists.txt
libs/UGrid/include/UGrid/: Contacts.hpp  Formatting.hpp  Mesh1D.hpp  Mesh2D.hpp  Operations.hpp  UGridEntity.hpp  UGridVarAttributeStringBuilder.hpp
libs/UGrid/src/: Contacts.cpp  Mesh1D.cpp  Mesh2D.cpp  Network1D.cpp  UGridEntity.cpp
libs/UGridAPI/: CMakeLists.txt
libs/UGridAPI/include/UGridAPI/: Contacts.hpp  MeshLocations.hpp  UGrid.hpp  UGridState.hpp
libs/UGridAPI/src/: UGrid.cpp
libs/UGridNET/: CMakeLists.txt  UGridNET.sln
libs/UGridNET/SWIG/: CMakeLists.txt
libs/UGridNET/SWIG/interface/: UGrid.i  UGridTypemaps.i
libs/UGridNET/config/: Directory.Build.props.in  NuGet.config
libs/UGridNET/cs_proj_templates/: App.config.in  AssemblyInfo.cs.in  AssemblyInfo.cs.template  Directory.Build.props.in
libs/UGridNET/dll/: CMakeLists.txt  Directory.Packages.props  packages.config.in
libs/UGridNET/dll/src/: AssemblyInfo.cs  ByteArrayExtensions.cs  ContactsExtensions.cs  DisposableMesh1D.cs  DisposableMesh2D.cs  DisposableNativeObject.cs  ExtensionsConstants.cs  IntPtrExtensions.cs  IntPtrHelpers.cs  Mesh1DExtensions.cs  Mesh2DExtensions.cs  Network1DExtensions.cs  ProjectedCoordinateSystem.cs  StringExtensions.cs  UGridBase.cs  UGridNETException.cs  UGridReader.cs  UGridWrapper.cs  UGridWriter.cs
libs/UGridNET/interface/: UGrid.i
libs/UGridNET/nuget/: CMakeLists.txt  Deltares.UGridNET.nuspec.in  Deltares.UGridNET.targets  README.md
libs/UGridNET/post_build/: CMakeLists.txt
libs/UGridNET/pre_build/: CMakeLists.txt
libs/UGridNET/projs/UnitTestConsumer_VS-16-2019/: Directory.Packages.props  NuGet.config
libs/UGridNET/projs/UnitTestConsumer_VS-16-2019/UnitTestConsumer/: UnitTestConsumer.csproj
libs/UGridNET/projs/UnitTestConsumer_VS-17-2022/: Directory.Packages.props  NuGet.config  UnitTestConsumer.sln
libs/UGridNET/projs/UnitTestConsumer_VS-17-2022/UnitTestConsumer/: UnitTestConsumer.csproj
libs/UGridNET/src/: Contacts.cs  Mesh1D.cs  Mesh2D.cs  MeshLocations.cs  Network1D.cs  SWIGTYPE_p_double.cs  SWIGTYPE_p_int.cs  SWIGTYPE_p_netCDF__NcDim.cs  SWIGTYPE_p_std__shared_ptrT_netCDF__NcFile_t.cs  SWIGTYPE_p_std__unordered_mapT_ugridapi__MeshLocations_std__string_std__hashT_ugridapi__MeshLocations_t_t.cs  SWIGTYPE_p_std__unordered_mapT_ugridapi__MeshLocations_ugrid__UGridFileDimensions_std__hashT_ugridapi__MeshLocations_t_t.cs  SWIGTYPE_p_std__vectorT_ugrid__Contacts_t.cs  SWIGTYPE_p_std__vectorT_ugrid__Mesh1D_t.cs  SWIGTYPE_p_std__vectorT_ugrid__Mesh2D_t.cs  SWIGTYPE_p_std__vectorT_ugrid__Network1D_t.cs  UGrid.cs  UGridCSHARP_wrap.cxx  UGridPINVOKE.cs  UGridState.cs  UGridTopologyType.cs  UGridioApiErrors.cs
libs/UGridNET/test/: CMakeLists.txt  Directory.Packages.props  UGridNETTests.cs  packages.config.in  test.csproj
libs/UGridNET/test/Properties/: AssemblyInfo.cs
libs/UGridNET/test/src/: ByteArrayExtensionsTests.cs  IntPtrExtensionsTests.cs  IntPtrHelpersTests.cs  SWIGTests.cs  StringExtensionsTests.cs  TestUtilities.cs  TopologyExtensionsTests.cs  UGridNETExceptionTests.cs  UGridNETTests.cs  UGridReaderTests.cs  UGridWriterTests.cs
libs/UGridNET/tools/: CMakeLists.txt
package/: version.rc.in  (+6 more)
src/UGrid/: CMakeLists.txt  Contacts.cpp  Mesh1D.cpp  Mesh2D.cpp  Network1D.cpp  UGridEntity.cpp
src/UGridApi/: CMakeLists.txt  UGrid.cpp
src/UGridFortran/: CMakeLists.txt  Mesh2D.f90  UGridInterfaces.f90  main.f90
tests/: CMakeLists.txt
tests/api/: ApiTests.cpp  CMakeLists.txt
tests/api/src/: APITests.cpp
tests/data/: AllUGridEntities.nc
tests/unit/: CMakeLists.txt  Mesh2dTests.cpp
tests/utils/: CMakeLists.txt
tests/utils/include/TestUtils/: Definitions.hpp  Definitions.hpp.in  MakeMeshes.hpp  Utils.hpp
tests/utils/src/: MakeMeshes.cpp
(+166 files in other folders)
